--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.2.0",
         "bootstrap": "^3.3.7",
+        "express": "^4.16.3",
         "handlebars": "^4.0.11",
         "jquery": "3.2.1"
     },
